# Copyright 2025 The Brotli Authors. All rights reserved.
#
# Distributed under MIT license.
# See file LICENSE for detail or copy at https://opensource.org/licenses/MIT

"""Brotli reference implementation"""

module(
    name = "brotli_java",
    version = "1.2.0",
    repo_name = "org_brotli_java",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.3.10")

bazel_dep(name = "brotli", version = "1.2.0", repo_name = "org_brotli")
local_path_override(
    module_name = "brotli",
    path = "..",
)
