# Description: brotli research tools.

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # MIT

cc_library(
    name = "dm",
    srcs = ["deorummolae.cc"],
    hdrs = ["deorummolae.h"],
    deps = ["@esaxx//:sais"],
)

cc_library(
    name = "durchschlag",
    srcs = ["durchschlag.cc"],
    hdrs = ["durchschlag.h"],
    deps = ["@divsufsort"],
)

cc_library(
    name = "sieve",
    srcs = ["sieve.cc"],
    hdrs = ["sieve.h"],
)

cc_binary(
    name = "dictionary_generator",
    srcs = ["dictionary_generator.cc"],
    deps = [
        ":dm",
        ":durchschlag",
        ":sieve",
    ],
)

cc_binary(
    name = "brotli_decoder",
    srcs = ["brotli_decoder.c"],
    linkstatic = 1,
    deps = ["@org_brotli//:brotlidec"],
)
