# Copyright 2025 The Brotli Authors. All rights reserved.
#
# Distributed under MIT license.
# See file LICENSE for detail or copy at https://opensource.org/licenses/MIT

"""Brotli reference implementation"""

module(
    name = "brotli_fuzz",
    version = "1.1.0",
    repo_name = "org_brotli_fuzz",
)

bazel_dep(name = "rules_fuzzing", version = "0.5.2")

bazel_dep(name = "brotli", version = "1.1.0", repo_name = "org_brotli")
local_path_override(
    module_name = "brotli",
    path = "../..",
)
