load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # MIT

go_library(
    name = "brotli",
    srcs = [
        "decode.go",
        "reader.go",
    ],
)

go_test(
    name = "brotli_test",
    srcs = ["brotli_test.go"],
    library = ":brotli",
    deps = [
        "//cbrotli",
    ],
)
