# Description:
#   Java port of Brotli decoder.

load("@rules_java//java:java_library.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # MIT

java_library(
    name = "prepared_dictionary",
    srcs = [
        "PreparedDictionary.java",
        "PreparedDictionaryGenerator.java",
    ],
)
